Scafolded Identity and added default admin user.

--- a/src/Web/SunNext.Web/appsettings.json
+++ b/src/Web/SunNext.Web/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SunNext.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
