--- a/src/Web/SunNext.Web/SunNext.Web.csproj
+++ b/src/Web/SunNext.Web/SunNext.Web.csproj
@@ -18,6 +18,10 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.3" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
@@ -39,5 +43,9 @@
     <ProjectReference Include="..\..\Services\SunNext.Services\SunNext.Services.csproj" />
     <ProjectReference Include="..\SunNext.Web.Infrastructure\SunNext.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\SunNext.Web.ViewModels\SunNext.Web.ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Settings\Index.cshtml" />
   </ItemGroup>
 </Project>
