--- a/src/Web/SunNext.Web.ViewModels/SunNext.Web.ViewModels.csproj
+++ b/src/Web/SunNext.Web.ViewModels/SunNext.Web.ViewModels.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
@@ -13,14 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <ProjectReference Include="..\..\Data\SunNext.Data.Models\SunNext.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Services\SunNext.Services.Mapping\SunNext.Services.Mapping.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Data\SunNext.Data.Models\SunNext.Data.Models.csproj" />
-    <ProjectReference Include="..\..\Services\SunNext.Services.Mapping\SunNext.Services.Mapping.csproj" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
