Added pages design and custom error pages for 404 and 500 with redirect.

--- a/src/Web/SunNext.Web/SunNext.Web.csproj
+++ b/src/Web/SunNext.Web/SunNext.Web.csproj
@@ -49,5 +49,9 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Settings\Index.cshtml" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Error\" />
+  </ItemGroup>
 </Project>
 
