Add blog post create/edit with form model and AutoMapper
- Created BlogPostFormModel and mapping profile
- Implemented Create/Edit actions and views
- Added IsPublished checkbox to form
- Updated layout and partial views
- Applied EF migration and admin seeding

--- a/src/Data/SunNext.Data/SunNext.Data.csproj
+++ b/src/Data/SunNext.Data/SunNext.Data.csproj
@@ -15,13 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -43,6 +36,14 @@
     <ProjectReference Include="..\..\SunNext.Common\SunNext.Common.csproj" />
     <ProjectReference Include="..\SunNext.Data.Common\SunNext.Data.Common.csproj" />
     <ProjectReference Include="..\SunNext.Data.Models\SunNext.Data.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
