--- a/src/Data/SunNext.Data/appsettings.json
+++ b/src/Data/SunNext.Data/appsettings.json
@@ -1,5 +1,13 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SunNext;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  }
+    "DefaultConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
