--- a/src/Web/SunNext.Web/appsettings.json
+++ b/src/Web/SunNext.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SunNext.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Server=.;Database=SunNextDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
