--- a/src/Web/SunNext.Web/SunNext.Web.csproj
+++ b/src/Web/SunNext.Web/SunNext.Web.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
@@ -48,10 +49,6 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Settings\Index.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Error\" />
   </ItemGroup>
 </Project>
 
