Implement blog post and solar asset CRUD with previews and styling.

--- a/src/Data/SunNext.Data.Models/SunNext.Data.Models.csproj
+++ b/src/Data/SunNext.Data.Models/SunNext.Data.Models.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\SunNext.Common\SunNext.Common.csproj" />
     <ProjectReference Include="..\SunNext.Data.Common\SunNext.Data.Common.csproj" />
   </ItemGroup>
   
