Fixed some pages and seeding logic.

--- a/src/Web/SunNext.Web/appsettings.json
+++ b/src/Web/SunNext.Web/appsettings.json
@@ -9,5 +9,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "d.ivan0v.6100@gmail.com",
+    "Password": "kzih mngs rncj bukk",
+    "EnableSsl": "true",
+    "FromEmail": "d.ivan0v.6100@gmail.com",
+    "FromName": "SunNext Contact Form"
+  }
 }
