🧩 Updated controllers, constants, styles, and layout for better UX and maintainability

--- a/src/Web/SunNext.Web/SunNext.Web.csproj
+++ b/src/Web/SunNext.Web/SunNext.Web.csproj
@@ -49,6 +49,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Settings\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Battery\Create.cshtml" />
   </ItemGroup>
 </Project>
 
